src/test/resources/testinput/parsable/symtab/invalid_coco/simpleInvariants.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl simpleInvariants {
  inv:
    let
      a = 2;
      b = 3
    in
      a < b;

  inv(Integer n, int a):
    (Integer) n < a;

  inv(int a, int b, int c):
    (a + b) * c > 0;

  inv:
    ("abc" + "def").length() == 6;

  inv:
    ("a" + "b").length() > 0;

  inv:
    true &&
    false;
}
